# oreonspy

./: .gitignore  README.md  environment.yml  pyproject.toml  pytest.ini
envs/: __init__.py
envs/classic_control/: cavity.py
gymnasium/: envs_link  error_link  logger_link  spaces_link  utils_link
nb/: BigHero_test ReccurentPPO.ipynb  FP cavity dynamics (copy).ipynb  FP cavity dynamics.ipynb  Generate testset.ipynb  Gymansium_test.ipynb  Input output system Example.ipynb  Reproduce figure 2 from Lee at al 1999.ipynb  Reproduce figure 2 from Xue et al 2026.ipynb  Resampling test.ipynb  Simulator cases tests.ipynb  Simulator commissioning.ipynb  Static FP cavity.ipynb  example.ipynb  v_cr analysis for testset.ipynb
nb/Simulator development/: Resampling test.ipynb  Simulator cases tests.ipynb  Simulator commissioning pulse.ipynb  Simulator commissioning.ipynb  Simulator math tests.ipynb  Simulator sampling frequency.ipynb
optics/: 1.0 - Finesse 3 introduction.ipynb  Finesse Test cavity scan.csv
src/oreonspy/: __init__.py  _numba_impl.py  _pure_impl.py  oreonspy.py  utils.py
tests/: optical_cavities.xml  test_backends_agree.py  test_backends_agree_pre.py  test_sampling_frequency.py
tests/optical_cavities_testset/: cavity_03384b46-68e3-59cc-9bf5-1c953a138a11.xml  cavity_09826825-7441-5cb8-9143-d27eea8918d1.xml  cavity_0c4b9c47-5b22-5678-9107-511887fa03d8.xml  cavity_142ab657-b670-55ad-9420-1838a153873b.xml  cavity_14397bf2-8fe3-5c85-811d-053248fff88c.xml  cavity_15e01893-b225-50b9-a948-1bf1df3da12e.xml  cavity_15eed920-7666-5256-9da3-c256f33b9fb5.xml  (+92 more)
tests/optical_cavities_testset 1/: cavity_03384b46-68e3-59cc-9bf5-1c953a138a11.xml  cavity_09826825-7441-5cb8-9143-d27eea8918d1.xml  cavity_142ab657-b670-55ad-9420-1838a153873b.xml  cavity_15eed920-7666-5256-9da3-c256f33b9fb5.xml  cavity_204d60a6-18df-59ed-86a0-a769f6b9d869.xml  cavity_2810c644-7793-55dd-8c4b-dc5c4ede4aaa.xml  cavity_3222fa81-d086-56e0-8939-f64f64ba8e2a.xml  cavity_3a8b0b07-972a-56d2-b055-4f0a1413bdbe.xml  cavity_40fea085-2eaa-592d-9e24-e39d1e346f2a.xml  cavity_452af9d3-edc4-51d5-bb58-02f933dbeb2c.xml  cavity_45567568-0340-5f09-96c5-a302e062989f.xml  cavity_4ca5ed57-c6d0-54ae-8b16-903b27cac8c8.xml  cavity_4caf7b22-c736-5f34-b7c9-88eccd7b4634.xml  cavity_518d6f6a-ce7d-54b6-bf0e-bbeb9bb896b3.xml  cavity_5deee9af-d971-59e0-ab84-7327ab90570d.xml  cavity_78a1fb46-a49e-567b-83cd-751fbd665117.xml  cavity_7c92d2f9-280e-570f-9f08-40a62fc90c27.xml  cavity_7d9a4874-1582-586f-899b-814c287a71df.xml  cavity_86f601d0-6035-5b85-ac8b-815e9219b944.xml  cavity_87ea86c6-0db4-578b-ba3e-fdc56a3749a6.xml  cavity_9091728a-dfbc-504b-abc7-990f30cfde82.xml  cavity_912ce877-a7ae-50a9-8528-92a916935a7f.xml  cavity_a0452fc4-3c46-5959-bb8d-1dc74670eabe.xml  cavity_ae6a9a87-a28c-547f-bf9a-f1995093d6be.xml  cavity_b086f5f0-7c48-5eea-9b97-b9b211f9a9f8.xml  cavity_b71f3c26-1518-51fc-a859-fed711d81b8e.xml  cavity_b82944a1-d30c-5ea5-b331-80fcc8d14b53.xml  cavity_b9e85ca4-33bf-5ba8-a46f-35807df3829e.xml  cavity_babdad2a-a7d5-5b9e-819c-4b04a97d713a.xml  cavity_bc4ececf-9363-5d2b-aa48-8226c8436568.xml  cavity_cbd7f5db-a267-57eb-8a47-4ecf81e9e2c3.xml  cavity_d0d3e82b-46e8-5488-8e42-15f06b6c7418.xml  cavity_d0d5a263-3707-54f3-81b3-0350b8349acb.xml  cavity_d33e6e2d-ef02-503b-a0f4-f74b24656036.xml  cavity_d98c9775-9029-5867-87c7-73cf56169010.xml  cavity_dbe91134-735e-596b-9369-073136677585.xml  cavity_ddb5cf50-ffe6-5742-8575-fa60186337f2.xml  cavity_deadde05-2fcf-5f4b-ad36-c968b057bb12.xml  cavity_df2e3482-d376-57af-9937-2ad9929a4913.xml  cavity_e778154a-d77a-56d3-bde4-a49be70ded07.xml  (+1 more)
(+2 files in other folders)
