[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oreonspy"
version = "0.0.5"
authors = [
  { name="Andrea Svizzeretto", email="andrea.svizzeretto@studenti.unipg.it" },
  { name="Mateusz Bawaj", email="mateusz.bawaj@unipg.it" },
]
description = "Optical resonator numerical simulation in python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://git.ligo.org/mateusz.bawaj/oreonspy"
Issues = "https://git.ligo.org/mateusz.bawaj/oreonspy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/oreonspy"]
