[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oreonspy"
version = "3.2.1"
authors = [
  { name="Andrea Svizzeretto", email="andrea.svizzeretto@studenti.unipg.it" },
  { name="Mateusz Bawaj", email="mateusz.bawaj@unipg.it" },
]
maintainers = [
  { name="Andrea Svizzeretto", email="andrea.svizzeretto@studenti.unipg.it" },
  { name="Mateusz Bawaj", email="mateusz.bawaj@unipg.it" },
]
keywords = [
  "optics",
  "simulation",
  "real-time",
  "batch",
]
description = "Optical resonator numerical simulation in python."
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://git.ligo.org/mateusz.bawaj/tesi_svizzeretto/"
repository = "https://git.ligo.org/mateusz.bawaj/tesi_svizzeretto/"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
Homepage = "https://git.ligo.org/mateusz.bawaj/oreonspy"
Issues = "https://git.ligo.org/mateusz.bawaj/oreonspy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/oreonspy"]
